Latest project files

--- a/CountdownTimer/MainWindow.resx
+++ b/CountdownTimer/MainWindow.resx
@@ -126,4 +126,171 @@
   <metadata name="colourDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>220, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAMDAAAAEAIACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsAAABHAAAAhgAAALEAAADWAAAA7gAA
+        APkAAAD5AAAA7gAAANYAAACwAAAAhQAAAEYAAAALAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAABIAAAAqAAAAPcAAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD2AAAApwAAAEcAAAABAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUgAAANAAAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAADPAAAATwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACMAAAC6AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAALcAAAAiAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWAAA
+        APIAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP83Nzf/fn5+/7u7u//i4uL//////wAAAP8AAAD//////+Li
+        4v+6urr/fn5+/zY2Nv8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADxAAAAVQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAEAAACEAAAA/wAAAP8AAAD/AAAA/wAAAP8KCgr/cHBw/9ra2v///////////////////////////wAA
+        AP8AAAD////////////////////////////Z2dn/b29v/woKCv8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAQAAAJcAAAD/AAAA/wAAAP8AAAD/AQEB/11dXf/o6Oj/////////////////////////
+        /////////////wAAAP8AAAD//////////////////////////////////////+bm5v9bW1v/AQEB/wAA
+        AP8AAAD/AAAA/wAAAP8AAACUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAhAAAAP8AAAD/AAAA/wAAAP8PDw//q6ur////////////////////
+        /////////////////////////////wAAAP8AAAD/////////////////////////////////////////
+        ////////sbGx/xISEv8AAAD/AAAA/wAAAP8AAAD/AAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABZAAAA/wAAAP8AAAD/AAAA/yMjI//c3Nz/////////
+        /////////////////////////////////////////////wAAAP8AAAD/////////////////////////
+        /////////////////////////////9vb2/8iIiL/AAAA/wAAAP8AAAD/AAAA/wAAAFYAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACQAAADyAAAA/wAAAP8AAAD/IyMj/+bm
+        5v//////////////////////////////////////////////////////////////////////////////
+        ///////////////////////////////////////////////////l5eX/IiIi/wAAAP8AAAD/AAAA/wAA
+        APEAAAAiAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALoAAAD/AAAA/wAA
+        AP8TExP/3Nzc////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////2tra/xER
+        Ef8AAAD/AAAA/wAAAP8AAAC3AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUgAA
+        AP8AAAD/AAAA/wEBAf+zs7P/////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////7CwsP8BAQH/AAAA/wAAAP8AAAD/AAAATwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAABAAAAzQAAAP8AAAD/AAAA/15eXv//////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////9aWlr/AAAA/wAAAP8AAAD/AAAA0AAAAAEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABJAAAA/wAAAP8AAAD/CwsL/+jo6P//////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///////////////////////////////////////////////////m5ub/CgoK/wAAAP8AAAD/AAAA/wAA
+        AEcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACqAAAA/wAAAP8AAAD/cXFx////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////b29v/wAA
+        AP8AAAD/AAAA/wAAAKcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwAAAD3AAAA/wAAAP8BAQH/29vb////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////2tra/wAAAP8AAAD/AAAA/wAAAPYAAAAKAAAAAAAAAAAAAAAAAAAAAAAAAEkAAAD/AAAA/wAA
+        AP85OTn/////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////zY2Nv8AAAD/AAAA/wAAAP8AAABGAAAAAAAAAAAAAAAAAAAAAAAA
+        AIcAAAD/AAAA/wAAAP+AgID/////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////35+fv8AAAD/AAAA/wAAAP8AAACFAAAAAAAA
+        AAAAAAAAAAAAAAAAALMAAAD/AAAA/wAAAP+8vLz/////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////////////7q6uv8AAAD/AAAA/wAA
+        AP8AAACxAAAAAAAAAAAAAAAAAAAAAAAAANkAAAD/AAAA/wAAAP/l5eX/////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////////////////////////////+Li
+        4v8AAAD/AAAA/wAAAP8AAADXAAAAAAAAAAAAAAAAAAAAAAAAAO0AAAD/AAAA/wQEBP/+/v7/////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////7+/v8DAwP/AAAA/wAAAP8AAADsAAAAAAAAAAAAAAAAAAAAAAAAAPkAAAD/AAAA/xAQ
+        EP//////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////8PDw//AAAA/wAAAP8AAAD5AAAAAAAAAAAAAAAAAAAAAAAA
+        APoAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA////////////////////////////////////
+        /////////////////////////////7G0////////////////////////////////////////////////
+        ////////////////////////AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD5AAAAAAAA
+        AAAAAAAAAAAAAAAAAO0AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA////////////////////
+        ////////////////////////////////////////9vb//yEr////////////////////////////////
+        ////////////////////////////////////////AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAADsAAAAAAAAAAAAAAAAAAAAAAAAANoAAAD/AAAA/wAAAP/l5eX/////////////////////////
+        ////////////////////////////////////////////////////////eoD//wAL////////////////
+        /////////////////////////////////////////////////////////////////////////////+Pj
+        4/8AAAD/AAAA/wAAAP8AAADYAAAAAAAAAAAAAAAAAAAAAAAAALMAAAD/AAAA/wAAAP+9vb3/////////
+        ///////////////////////////////////////////////////////////////////a3P//BxL//wAL
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////7u7u/8AAAD/AAAA/wAAAP8AAACxAAAAAAAAAAAAAAAAAAAAAAAAAIgAAAD/AAAA/wAA
+        AP+BgYH/////////////////////////////////////////////////////////////////////////
+        //9DS///AAv//wAL////////////////////////////////////////////////////////////////
+        /////////////////////////////35+fv8AAAD/AAAA/wAAAP8AAACGAAAAAAAAAAAAAAAAAAAAAAAA
+        AEkAAAD/AAAA/wAAAP86Ojr/////////////////////////////////////////////////////////
+        /////////////6aq//8AC///AAv//wAL////////////////////////////////////////////////
+        /////////////////////////////////////////////zc3N/8AAAD/AAAA/wAAAP8AAABHAAAAAAAA
+        AAAAAAAAAAAAAAAAAA0AAAD4AAAA/wAAAP8BAQH/3Nzc////////////////////////////////////
+        ////////////////////////8vP//xsl//8AC///AAv//wAL////////////////////////////////
+        ////////////////////////////////////////////////////////29vb/wEBAf8AAAD/AAAA/wAA
+        APYAAAALAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACrAAAA/wAAAP8AAAD/cnJy////////////////////
+        ////////////////////////////////////////b3X//wAL//8AC///AAv//wAL////////////////
+        ////////////////////////////////////////////////////////////////////////cHBw/wAA
+        AP8AAAD/AAAA/wAAAKgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABKAAAA/wAAAP8AAAD/DAwM/+np
+        6f/////////////////////////////////////////////////S1P//BRD//wAL//8AC///AAv//wAL
+        ////////////////////////////////////////////////////////////////////////////////
+        ///n5+f/CgoK/wAAAP8AAAD/AAAA/wAAAEgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAA0gAA
+        AP8AAAD/AAAA/2FhYf////////////////////////////////////////////7+//86Qv//AAv//wAL
+        //8AC///AAv//wAL////////////////////////////////////////////////////////////////
+        //////////////////9dXV3/AAAA/wAAAP8AAAD/AAAA0AAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAVQAAAP8AAAD/AAAA/wEBAf+1tbX//////////////////////////////////////5uf
+        //8AC///AAv//wAL//8AC///AAv//wAL////////////////////////////////////////////////
+        /////////////////////////////7Ozs/8BAQH/AAAA/wAAAP8AAAD/AAAAUgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALwAAAD/AAAA/wAAAP8UFBT/3t7e////////////////////
+        ////////7e7//xUf//8AC///AAv//wAL//8AC///AAv//wAL////////////////////////////////
+        ////////////////////////////////////////3d3d/xMTE/8AAAD/AAAA/wAAAP8AAAC5AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACUAAADzAAAA/wAAAP8AAAD/JSUl/+fn
+        5///////////////////////ZWz//wAL//8AC///AAv//wAL//8AC///AAv//wAL////////////////
+        ///////////////////////////////////////////////////m5ub/IyMj/wAAAP8AAAD/AAAA/wAA
+        APEAAAAjAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABbAAAA/wAA
+        AP8AAAD/AAAA/yUlJf/e3t7////////////KzP//Ag3//wAL//8AC///AAv//wAL//8AC///AAv//wAL
+        /////////////////////////////////////////////////////////////93d3f8jIyP/AAAA/wAA
+        AP8AAAD/AAAA/wAAAFcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAiAAAAP8AAAD/AAAA/wAAAP8UFBT/tLS0//z8//8xOv//AAv//wAL//8AC///AAv//wAL
+        //8AC///AAv//wAL////////////////////////////////////////////////////////u7u7/xcX
+        F/8AAAD/AAAA/wAAAP8AAAD/AAAAgwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAJkAAAD/AAAA/wAAAP8AAAD/AQEB/zc8pf8AC///AAv//wAL
+        //8AC///AAv//wAL//8AC///AAv//wAL/////////////////////////////////////////////+jo
+        6P9eXl7/AQEB/wAAAP8AAAD/AAAA/wAAAP8AAACWAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAACIAAAA/wAAAP8AAAD/AAEX/wAK
+        7/8AC///AAv//wAL//8AC///AAv//wAL//8AC///AAv//wAL////////////////////////////////
+        ///c3Nz/cXFx/wsLC/8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAIQAAAABAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXAAA
+        APMAAAD/AAel/wAL//8AC///AAv//wAL//8AC///AAv//wAL//8AC///AAv//wAL/////////////+Tk
+        5P+8vLz/gICA/zk5Of8BAQH/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADyAAAAWAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAACUABE7MAAv+/wAL//8AC///AAv//wAL//8AC///AAv//wAL//8AC///AAv//wAL
+        //8RERH/AQEB/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAALoAAAAkAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACf8cAAjLtQAL9v0AC///AAv//wAL//8AC///AAv//wAL
+        //8AC///AAv//wAL//8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADRAAAAUwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM8xUACLybAAnV7AAL
+        /f8AC///AAv//wAL//8AC///AAv//wAL//8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD3AAAAqQAA
+        AEkAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAHsyUAB6aJAAivyAAJyuoACd35AArq/QAL9/8AAAD6AAAA7gAAANkAAACzAAAAhwAA
+        AEkAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///////8AAP///////wAA///gB///
+        AAD//wAA//8AAP/8AAA//wAA//AAAA//AAD/4AAAB/8AAP+AAAAB/wAA/wAAAAD/AAD+AAAAAH8AAP4A
+        AAAAfwAA/AAAAAA/AAD4AAAAAB8AAPgAAAAAHwAA8AAAAAAPAADwAAAAAA8AAOAAAAAABwAA4AAAAAAH
+        AADgAAAAAAcAAMAAAAAAAwAAwAAAAAADAADAAAAAAAMAAMAAAAAAAwAAwAAAAAADAADAAAAAAAMAAMAA
+        AAAAAwAAwAAAAAADAADAAAAAAAMAAMAAAAAAAwAA4AAAAAAHAADgAAAAAAcAAOAAAAAABwAA8AAAAAAP
+        AADwAAAAAA8AAPgAAAAAHwAA+AAAAAAfAAD8AAAAAD8AAP4AAAAAfwAA/gAAAAB/AAD/AAAAAP8AAP+A
+        AAAB/wAA/+AAAAf/AAD/8AAAD/8AAP/4AAA//wAA//4AAP//AAD//8AH//8AAP///////wAA////////
+        AAA=
+</value>
+  </data>
 </root>
